# obs-studio

UI/: obs-app.cpp  qt-wrappers.cpp  window-basic-main-outputs.cpp  window-basic-main.cpp  window-basic-settings-stream.cpp  window-basic-settings.cpp  window-basic-settings.hpp
UI/forms/: OBSBasicSettings.ui
libobs/: obs-nix.c
libobs-opengl/: gl-nix.c
plugins/linux-capture/: linux-capture.c  xcomposite-input.c
plugins/linux-pipewire/: linux-pipewire.c
plugins/mac-videotoolbox/: encoder.c
plugins/obs-ffmpeg/: CMakeLists.txt  obs-ffmpeg-mpegts.c  obs-ffmpeg-mux.c  obs-ffmpeg-output.c  obs-ffmpeg-output.h  obs-ffmpeg-srt.h
